Android/library/src/main/cpp/core/jni_helper.h

jchar jnihelper_get_char_field(jobject obj, jfieldID fieldID);
jshort jnihelper_get_short_field(jobject obj, jfieldID fieldID);
jint jnihelper_get_int_field(jobject obj, jfieldID fieldID);
jlong jnihelper_get_long_field(jobject obj, jfieldID fieldID);
jfloat jnihelper_get_float_field(jobject obj, jfieldID fieldID);
jdouble jnihelper_get_double_field(jobject obj, jfieldID fieldID);
void jnihelper_set_object_field(jobject obj, jfieldID fieldID, jobject value);
void jnihelper_set_boolean_field(jobject obj, jfieldID fieldID, jboolean value);
void jnihelper_set_byte_field(jobject obj, jfieldID fieldID, jbyte value);
void jnihelper_set_char_field(jobject obj, jfieldID fieldID, jchar value);
void jnihelper_set_short_field(jobject obj, jfieldID fieldID, jshort value);
void jnihelper_set_int_field(jobject obj, jfieldID fieldID, jint value);
void jnihelper_set_long_field(jobject obj, jfieldID fieldID, jlong value);
void jnihelper_set_float_field(jobject obj, jfieldID fieldID, jfloat value);
void jnihelper_set_double_field(jobject obj, jfieldID fieldID, jdouble value);
jboolean jnihelper_get_static_boolean_field(jclass clazz, jfieldID fieldID);
jbyte jnihelper_get_static_byte_field(jclass clazz, jfieldID fieldID);
jchar jnihelper_get_static_char_field(jclass clazz, jfieldID fieldID);
jshort jnihelper_get_static_short_field(jclass clazz, jfieldID fieldID);
jint jnihelper_get_static_int_field(jclass clazz, jfieldID fieldID);
jlong jnihelper_get_static_long_field(jclass clazz, jfieldID fieldID);
jfloat jnihelper_get_static_float_field(jclass clazz, jfieldID fieldID);
jdouble jnihelper_get_static_double_field(jclass clazz, jfieldID fieldID);
void jnihelper_set_static_object_field(jclass clazz, jfieldID fieldID, jobject value);
void jnihelper_set_static_boolean_field(jclass clazz, jfieldID fieldID, jboolean value);
void jnihelper_set_static_byte_field(jclass clazz, jfieldID fieldID, jbyte value);
void jnihelper_set_static_char_field(jclass clazz, jfieldID fieldID, jchar value);
void jnihelper_set_static_short_field(jclass clazz, jfieldID fieldID, jshort value);
void jnihelper_set_static_int_field(jclass clazz, jfieldID fieldID, jint value);
void jnihelper_set_static_long_field(jclass clazz, jfieldID fieldID, jlong value);
void jnihelper_set_static_float_field(jclass clazz, jfieldID fieldID, jfloat value);
void jnihelper_set_static_double_field(jclass clazz, jfieldID fieldID, jdouble value);
jsize jnihelper_get_array_length(jarray array);
jobject jnihelper_get_object_array_element(jobjectArray array, jsize index);
void jnihelper_set_object_array_element(jobjectArray array, jsize index, jobject value);
jclass jnihelper_get_object_class(jobject obj);
jobject jnihelper_surface_to_native_window(jobject surface);
/**
 * 从 AInputEvent KeyEvent 提取 Unicode 字符（通过 JNI KeyEvent.getUnicodeChar）
 */
uint32_t jnihelper_keyevent_get_unicode(AInputEvent *event);