StArray.ModManager.Android/Native/JniHelperNative.cs


    [DllImport(LibModManager, EntryPoint = "jnihelper_get_char_field")]
    [return: MarshalAs(UnmanagedType.U2)]
    public static extern char GetCharField(IntPtr obj, IntPtr fieldID);

    [DllImport(LibModManager, EntryPoint = "jnihelper_get_short_field")]
    public static extern short GetShortField(IntPtr obj, IntPtr fieldID);

    [DllImport(LibModManager, EntryPoint = "jnihelper_get_int_field")]
    public static extern int GetIntField(IntPtr obj, IntPtr fieldID);

    [DllImport(LibModManager, EntryPoint = "jnihelper_get_long_field")]
    public static extern long GetLongField(IntPtr obj, IntPtr fieldID);

    [DllImport(LibModManager, EntryPoint = "jnihelper_get_float_field")]
    public static extern float GetFloatField(IntPtr obj, IntPtr fieldID);

    [DllImport(LibModManager, EntryPoint = "jnihelper_get_double_field")]
    public static extern double GetDoubleField(IntPtr obj, IntPtr fieldID);

    [DllImport(LibModManager, EntryPoint = "jnihelper_set_object_field")]
    public static extern void SetObjectField(IntPtr obj, IntPtr fieldID, IntPtr value);

    [DllImport(LibModManager, EntryPoint = "jnihelper_set_boolean_field")]
    public static extern void SetBooleanField(
        IntPtr obj,
        IntPtr fieldID,
        [MarshalAs(UnmanagedType.I1)] bool value);

    [DllImport(LibModManager, EntryPoint = "jnihelper_set_byte_field")]
    public static extern void SetByteField(IntPtr obj, IntPtr fieldID, sbyte value);

    [DllImport(LibModManager, EntryPoint = "jnihelper_set_char_field")]
    public static extern void SetCharField(
        IntPtr obj,
        IntPtr fieldID,
        [MarshalAs(UnmanagedType.U2)] char value);

    [DllImport(LibModManager, EntryPoint = "jnihelper_set_short_field")]
    public static extern void SetShortField(IntPtr obj, IntPtr fieldID, short value);

    [DllImport(LibModManager, EntryPoint = "jnihelper_set_int_field")]
    public static extern void SetIntField(IntPtr obj, IntPtr fieldID, int value);

    [DllImport(LibModManager, EntryPoint = "jnihelper_set_long_field")]
    public static extern void SetLongField(IntPtr obj, IntPtr fieldID, long value);

    [DllImport(LibModManager, EntryPoint = "jnihelper_set_float_field")]
    public static extern void SetFloatField(IntPtr obj, IntPtr fieldID, float value);

    [DllImport(LibModManager, EntryPoint = "jnihelper_set_double_field")]
    public static extern void SetDoubleField(IntPtr obj, IntPtr fieldID, double value);

    [DllImport(LibModManager, EntryPoint = "jnihelper_get_static_boolean_field")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool GetStaticBooleanField(IntPtr clazz, IntPtr fieldID);

    [DllImport(LibModManager, EntryPoint = "jnihelper_get_static_byte_field")]
    public static extern sbyte GetStaticByteField(IntPtr clazz, IntPtr fieldID);

    [DllImport(LibModManager, EntryPoint = "jnihelper_get_static_char_field")]
    [return: MarshalAs(UnmanagedType.U2)]
    public static extern char GetStaticCharField(IntPtr clazz, IntPtr fieldID);

    [DllImport(LibModManager, EntryPoint = "jnihelper_get_static_short_field")]
    public static extern short GetStaticShortField(IntPtr clazz, IntPtr fieldID);

    [DllImport(LibModManager, EntryPoint = "jnihelper_get_static_int_field")]
    public static extern int GetStaticIntField(IntPtr clazz, IntPtr fieldID);

    [DllImport(LibModManager, EntryPoint = "jnihelper_get_static_long_field")]
    public static extern long GetStaticLongField(IntPtr clazz, IntPtr fieldID);

    [DllImport(LibModManager, EntryPoint = "jnihelper_get_static_float_field")]
    public static extern float GetStaticFloatField(IntPtr clazz, IntPtr fieldID);

    [DllImport(LibModManager, EntryPoint = "jnihelper_get_static_double_field")]
    public static extern double GetStaticDoubleField(IntPtr clazz, IntPtr fieldID);

    [DllImport(LibModManager, EntryPoint = "jnihelper_set_static_object_field")]
    public static extern void SetStaticObjectField(IntPtr clazz, IntPtr fieldID, IntPtr value);

    [DllImport(LibModManager, EntryPoint = "jnihelper_set_static_boolean_field")]
    public static extern void SetStaticBooleanField(
        IntPtr clazz,
        IntPtr fieldID,
        [MarshalAs(UnmanagedType.I1)] bool value);

    [DllImport(LibModManager, EntryPoint = "jnihelper_set_static_byte_field")]
    public static extern void SetStaticByteField(IntPtr clazz, IntPtr fieldID, sbyte value);

    [DllImport(LibModManager, EntryPoint = "jnihelper_set_static_char_field")]
    public static extern void SetStaticCharField(
        IntPtr clazz,
        IntPtr fieldID,
        [MarshalAs(UnmanagedType.U2)] char value);

    [DllImport(LibModManager, EntryPoint = "jnihelper_set_static_short_field")]
    public static extern void SetStaticShortField(IntPtr clazz, IntPtr fieldID, short value);

    [DllImport(LibModManager, EntryPoint = "jnihelper_set_static_int_field")]
    public static extern void SetStaticIntField(IntPtr clazz, IntPtr fieldID, int value);

    [DllImport(LibModManager, EntryPoint = "jnihelper_set_static_long_field")]
    public static extern void SetStaticLongField(IntPtr clazz, IntPtr fieldID, long value);

    [DllImport(LibModManager, EntryPoint = "jnihelper_set_static_float_field")]
    public static extern void SetStaticFloatField(IntPtr clazz, IntPtr fieldID, float value);

    [DllImport(LibModManager, EntryPoint = "jnihelper_set_static_double_field")]
    public static extern void SetStaticDoubleField(IntPtr clazz, IntPtr fieldID, double value);

    [DllImport(LibModManager, EntryPoint = "jnihelper_get_array_length")]
    public static extern int GetArrayLength(IntPtr array);

    [DllImport(LibModManager, EntryPoint = "jnihelper_get_object_array_element")]
    public static extern IntPtr GetObjectArrayElement(IntPtr array, int index);

    [DllImport(LibModManager, EntryPoint = "jnihelper_set_object_array_element")]
    public static extern void SetObjectArrayElement(IntPtr array, int index, IntPtr value);

    /// <summary>
    /// 获取对象的 Java 类
    /// </summary>
    [DllImport(LibModManager, EntryPoint = "jnihelper_get_object_class")]
    public static extern IntPtr GetObjectClass(IntPtr obj);

    /// <summary>
    /// Surface 对象转 ANativeWindow（指针形式返回）
    /// </summary>
    [DllImport(LibModManager, EntryPoint = "jnihelper_surface_to_native_window")]
    public static extern IntPtr SurfaceToNativeWindow(IntPtr surface);

    /// <summary>
    /// 从 AInputEvent* 提取 Unicode 字符（JNI KeyEvent.getUnicodeChar）
    /// </summary>
    [DllImport(LibModManager, EntryPoint = "jnihelper_keyevent_get_unicode")]
    public static extern uint KeyEventGetUnicode(IntPtr keyEvent);

    /// <summary>
    /// C# → C: 写入 int[] 到指定 key（C# SetData → C buffer → Java nativeGetData）
    /// </summary>
    [DllImport(LibModManager, EntryPoint = "jnihelper_set_data")]
    public static extern void SetData(
        [MarshalAs(UnmanagedType.LPStr)] string key, IntPtr data, int len);

    /// <summary>
    /// C ←: 获取指定 key 的数据长度
    /// </summary>
    [DllImport(LibModManager, EntryPoint = "jnihelper_get_data_len")]
    public static extern int GetDataLength([MarshalAs(UnmanagedType.LPStr)] string key);

    /// <summary>
    /// C ←: 获取指定 key 的数据 buffer 指针
    /// </summary>
    [DllImport(LibModManager, EntryPoint = "jnihelper_get_data_buf")]
    public static extern IntPtr GetDataBuffer([MarshalAs(UnmanagedType.LPStr)] string key);
}
